ingressNginxDeployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: demo
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/name: "nginxLabel"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/managed-by: "kubectl"
    app.kubernetes.io/instance: "nginxLabel-dev"
  name: nginx-deployment
  namespace: demo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/version: "0.0.1"
      app.kubernetes.io/name: "nginxLabel"
      app.kubernetes.io/component: "frontend"
      app.kubernetes.io/managed-by: "kubectl"
      app.kubernetes.io/instance: "nginxLabel-dev"
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "0.0.1"
        app.kubernetes.io/name: "nginxLabel"
        app.kubernetes.io/component: "frontend"
        app.kubernetes.io/managed-by: "kubectl"
        app.kubernetes.io/instance: "nginxLabel-dev"
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
        runAsNonRoot: true
      restartPolicy: Always
      containers:
        - name: nginx
          image: k3d-registry.localhost:5000/nginx-unprivileged:alpine
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 20Mi
              cpu: 200m
            requests:
              cpu: 100m
              memory: 10Mi
          ports:
            - containerPort: 8080
              name: nginx-web-port
          livenessProbe:
            httpGet:
              path: /
              port: nginx-web-port
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/name: "nginxLabel"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/managed-by: "kubectl"
    app.kubernetes.io/instance: "nginxLabel-dev"
  name: nginx-service
  namespace: demo
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: nginx-web-port
  selector:
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/name: "nginxLabel"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/managed-by: "kubectl"
    app.kubernetes.io/instance: "nginxLabel-dev"
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: demo
  labels:
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/name: "nginxLabel"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/managed-by: "kubectl"
    app.kubernetes.io/instance: "nginxLabel-dev"
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
